--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,125 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
+
+.img-responsive {
+    margin: 0 auto;
+}
+
+.flashcardTable {
+    table-layout: auto;
+    border-collapse: collapse;
+    position: relative;
+}
+
+.flashcardTable th {
+    width: 300px;
+}
+
+.flashcardTable td {
+    width: 300px;
+
+}
+
+.action {
+    display: inline-flex;
+}
+
+.swap-animation.ng-enter, .swap-animation.ng-leave {
+    transition: 0.5s linear all;
+}
+
+.swap-animation.ng-enter {
+    left: -100%;
+}
+
+.swap-animation.ng-enter-active {
+    left: 0px;
+}
+
+.swap-animation.ng-leave {
+    left: 0px;
+}
+
+.swap-animation.ng-leave-active {
+    left: 100%;
+}
+
+.repeat-animation.animate-enter,
+.repeat-animation.animate-leave {
+    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    position: relative;
+    display: block;
+}
+
+.repeat-animation.animate-leave.animate-leave-active,
+.repeat-animation.animate-enter {
+    -webkit-transform: scaleY(0);
+    -moz-transform: scaleY(0);
+    -ms-transform: scaleY(0);
+    -o-transform: scaleY(0);
+    transform: scaleY(0);
+    height: 0px;
+    opacity: 0;
+}
+
+.repeat-animation.animate-enter.animate-enter-active,
+.repeat-animation.animate-leave {
+    -webkit-transform: scaleY(1);
+    -moz-transform: scaleY(1);
+    -ms-transform: scaleY(1);
+    -o-transform: scaleY(1);
+    transform: scaleY(1);
+    height: 30px;
+    opacity: 1;
+}
+
+.test {
+    margin: 15px 10px;
+}
+
+div.label {
+    color: black;
+}
+
+md-input-container label:not(._md-container-ignore) {
+    font-size: 14px;
+}
+
+md-input-container .md-input {
+    width: 100%;
+}
+
+.md-button.md-icon-button {
+    color: black;
+}
+
+md-icon {
+    color: black;
+}
+
+md-toolbar.md-default-theme:not(.md-menu-toolbar) md-icon, md-toolbar:not(.md-menu-toolbar) md-icon {
+    fill: black;
+
+}
+
+md-toolbar.md-default-theme:not(.md-menu-toolbar) .md-button[disabled] md-icon, md-toolbar:not(.md-menu-toolbar) .md-button[disabled] md-icon {
+    fill: rgba(0, 0, 0, 0.26);
+}
+
+
+.radioValue {
+    margin-left: 5px;
+    color: #0f9d58;
+    font-weight: bold;
+    padding: 5px;
+}
+
